crates/uitest/fixtures/parser/array.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/array.fe
---
error[1-0001]: unexpected syntax while parsing array definition
  ┌─ array.fe:2:7
  │
2 │ [1, 2 a, 3]
  │       ^ unexpected


